--- a/src/theme.less
+++ b/src/theme.less
@@ -1,4 +1,4 @@
-@primary-color: #1DA57A; // primary color for all components
+@primary-color: #1890ff; // primary color for all components
 @link-color: #1890ff; // link color
 @success-color: #52c41a; // success state color
 @warning-color: #faad14; // warning state color
